# recurl

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  specs.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  compliance.md  daemon.md  installation.md  layers.md  milestones.md
documentation/: README.md  mkdocs.yml
documentation/docs/: index.md
documentation/docs/getting-started/: first-request.md  installation.md  quickstart.md
documentation/docs/how-it-works/: architecture.md  daemon.md  detection.md  layers.md
documentation/docs/reference/: antibot-services.md  platforms.md  troubleshooting.md
documentation/docs/usage/: cli.md  environment.md  modes.md
packaging/aur/: .SRCINFO  PKGBUILD  PKGBUILD-bin
packaging/homebrew/: rcurl.rb
packaging/npm/: package.json
packaging/pypi/: pyproject.toml  setup.py
packaging/pypi/recurl/: __init__.py  cli.py
packaging/scoop/: rcurl.json
scripts/: install.ps1  install.sh  update-release.sh
src/: config.rs  daemon_client.rs  engine.rs  escalation.rs  main.rs  protocol.rs
src/daemon/: browser_state.rs  ipc.rs  lifecycle.rs  main.rs  pool.rs  protocol.rs
src/detection/: mod.rs  patterns.rs  status.rs
src/impersonation/: mod.rs
src/js_preflight/: browser.rs  browser_config.rs  chromium.rs  cookies.rs  mod.rs  preflight_state.rs  stealth.rs
tests/: browser_integration.rs  conformance.rs
