[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recurl-cli"
version = "0.1.2"
description = "Drop-in curl replacement with automatic anti-bot bypass"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["curl", "http", "anti-bot", "scraping", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/neul-labs/recurl"
Repository = "https://github.com/neul-labs/recurl"
Documentation = "https://docs.neullabs.com/recurl"
Issues = "https://github.com/neul-labs/recurl/issues"

[project.scripts]
recurl = "recurl.cli:main"
recurld = "recurl.cli:main_daemon"
